--- a/pet-project-joyeria-ddd/business/pom.xml
+++ b/pet-project-joyeria-ddd/business/pom.xml
@@ -38,6 +38,12 @@
             <artifactId>mockito-junit-jupiter</artifactId>
             <version>4.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.example.joyeria</groupId>
+            <artifactId>domain</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
