--- a/pet-project-joyeria-ddd/business/pom.xml
+++ b/pet-project-joyeria-ddd/business/pom.xml
@@ -24,7 +24,7 @@
         </dependency>
         <dependency>
             <groupId>co.com.sofka</groupId>
-            <artifactId>domain</artifactId>
+            <artifactId>business</artifactId>
             <version>1.5.0</version>
             <scope>compile</scope>
         </dependency>
